gui/3.10/admin-portal/security/sso.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso)[Next](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/3.10/intro/)
  *     * [Overview](https://docs.tigergraph.com/gui/3.10/intro/)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/3.10/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/3.10/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/3.10/graphstudio/design-schema)
      * [Load Data](https://docs.tigergraph.com/gui/3.10/graphstudio/load-data)
        * [Data Transformation](https://docs.tigergraph.com/gui/3.10/graphstudio/data-transformation)
      * [Explore Graph](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/3.10/graphstudio/explore-graph/augment-visualization-result)
      * Build Graph Patterns (Deprecated)
        * [Visual Query Builder](https://docs.tigergraph.com/gui/3.10/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/3.10/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/3.10/graphstudio/write-queries)
      * [Write openCypher Queries in TigerGraph](https://docs.tigergraph.com/gui/3.10/graphstudio/write-open-cypher-queries-in-tigergraph)
      * [Actions](https://docs.tigergraph.com/gui/3.10/graphstudio/actions)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/3.10/graphstudio/migrate-from-relational-database)
      * [Export and Import Solution](https://docs.tigergraph.com/gui/3.10/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.10/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/3.10/graphstudio/known-issues)
      * [ZoomChart Update](https://docs.tigergraph.com/gui/3.10/graphstudio/graphstudio-zoomchart-update)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/3.10/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/3.10/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/3.10/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/3.10/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/3.10/admin-portal/monitoring/README)
        * [Queries](https://docs.tigergraph.com/gui/3.10/admin-portal/monitoring/queries)
        * [Logs](https://docs.tigergraph.com/gui/3.10/admin-portal/monitoring/log-viewer)
      * [Management](https://docs.tigergraph.com/gui/3.10/admin-portal/management/README)
        * [License](https://docs.tigergraph.com/gui/3.10/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/3.10/admin-portal/management/user-management)
        * [Components](https://docs.tigergraph.com/gui/3.10/admin-portal/components/README)
          * [GPE](https://docs.tigergraph.com/gui/3.10/admin-portal/components/gpe)
          * [GSQL](https://docs.tigergraph.com/gui/3.10/admin-portal/components/gsql)
          * [Application Server (GUI)](https://docs.tigergraph.com/gui/3.10/admin-portal/components/gui)
          * [Kafka](https://docs.tigergraph.com/gui/3.10/admin-portal/components/kafka)
          * [Nginx](https://docs.tigergraph.com/gui/3.10/admin-portal/components/nginx)
          * [RESTPP](https://docs.tigergraph.com/gui/3.10/admin-portal/components/restpp)
          * [Change Data Capture (CDC)](https://docs.tigergraph.com/gui/3.10/admin-portal/components/cdc)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/3.10/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso-aad)
        * [SSO.OIDC via Okta](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso-oidc-okta)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/3.10/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/3.10/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/3.10/admin-portal/known-issues)
    * [Legacy Version Documentation](https://docs.tigergraph.com/gui/3.10/intro/legacy-tg-versions)


GraphStudio and Admin Portal 3.10
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 3.10](https://docs.tigergraph.com/gui/3.10/intro/)
  * Admin Portal
  * Security
  * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/3.10/modules/admin-portal/pages/security/sso.adoc)
### Contents
  * [Service provider information](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_service_provider_information)
  * [Hostname](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_hostname)
  * [X509 certificate and private key](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_x509_certificate_and_private_key)
  * [Identity provider information](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_identity_provider_information)
  * [Security options](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_security_options)


# Single Sign-on (SSO)
### Contents
  * [Service provider information](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_service_provider_information)
  * [Hostname](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_hostname)
  * [X509 certificate and private key](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_x509_certificate_and_private_key)
  * [Identity provider information](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_identity_provider_information)
  * [Security options](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_security_options)


The settings on this page are related to set up Single Sign-on (SSO) on TigerGraph. This page does not appear on the Admin Portal for TigerGraph Cloud solutions because of the unified [User Authentication](https://docs.tigergraph.com/cloud/main/security/manage-db-users) system present in TigerGraph Cloud.
Consult the [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso) page on the TigerGraph Server documentation to read more about the supported SSO methods and the configurations required.
![sso page](https://docs.tigergraph.com/gui/3.10/admin-portal/_images/sso-page.png)
## [](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_service_provider_information)Service provider information
When you configure SSO on TigerGraph with a trusted identity provider, TigerGraph is the service provider.
### [](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_hostname)Hostname
The URL at which you access GraphStudio.
### [](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_x509_certificate_and_private_key)X509 certificate and private key
In SAML 2.0, you have the option of signing the SAML requests made to the identity provider. To sign a request, TigerGraph uses the X509 certificate and private key provided here.
There are two ways of providing the X509 certificate and private key:
  * Upload files.
    * Click the file upload button next to the input box, and a drop-down menu for uploading files will appear. Click the upload file option to upload the desired file.
![sso file upload](https://docs.tigergraph.com/gui/3.10/admin-portal/_images/sso-file-upload.png)
  * Generate a self-signed certificate.
    * Click the file upload button next to the input box, and a drop-down for uploading files will appear. Click the **Self sign** button. There will be a pop-up box to fill in the information. Items marked with * are required.
![self sign](https://docs.tigergraph.com/gui/3.10/admin-portal/_images/self-sign.png)


## [](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_identity_provider_information)Identity provider information
These fields provide information on your identity provider. You should be able to obtain the correct values for these fields from your identity provider.
  * Entity ID
  * SSO URL
  * X509 certificate


## [](https://docs.tigergraph.com/gui/3.10/admin-portal/security/sso#_security_options)Security options
At the bottom of the SSO page are a list of security options you can configure for SSO:
  * Sign authentication requests before sending to Identity Provider
  * Require Identity Provider to sign [responses](https://www.samltool.com/generic_sso_res.php)
  * Require Identity Provider to sign [assertions](https://en.wikipedia.org/wiki/SAML_2.0#SAML_2.0_assertions)
  * Require Identity Provider to sign [metadata](https://en.wikipedia.org/wiki/SAML_metadata)
  * [Signature algorithm](https://en.wikipedia.org/wiki/Digital_Signature_Algorithm)
  * [Authentication context](http://docs.oasis-open.org/security/saml/v2.0/saml-authn-context-2.0-os.pdf)
    * An attribute that defines how a user should log in.
    * Example value: `urn:oasis:names:tc:SAML:2.0:ac:classes:Password`


It is recommended that you enable as many of the options as possible for maximum security. However, some identity providers do not support enabling certain options at the same time. Refer to your identity provider’s documentation to determine which options to use:
  * [Okta](https://www.okta.com/)
  * [Auth0](https://auth0.com/)
  * [Azure Active Directory (Azure AD)](https://docs.microsoft.com/en-us/azure/active-directory/)
  * [PingFederate](https://docs.pingidentity.com/bundle/pingfederate-110/page/ikr1564002999528.html)
  * [Active Directory Federation Services (AD FS)](https://learn.microsoft.com/en-us/windows-server/identity/active-directory-federation-services)


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


